<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LTM.it</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="name">Name: </string>
    <string name="password">Password: </string>
    <string name="email">E-mail: </string>
    <string name="doYou">I want to learn my words by e-mail</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="title_activity_organization">OrganizationActivity</string>
    <string name="create_database">CREATE NEW</string>
    <string name="title_activity_checking">CheckingActivity</string>
    <string name="title_activity_adding">ltm.it create new...</string>
    <string name="category">CATEGORY</string>
    <string name="database">DATABASE</string>
    <string name="title_activity_create_new_category">CreateNewCategoryActivity</string>
    <string name="name_of_new_category">Category name</string>
    <string name="name_of_new_database">Database name</string>
    <string name="priority">Priority</string>
    <string name="name_of_the_category">Category for this database</string>
    <string name="title_activity_create_new_database">CreateNewDatabaseActivity</string>
    <string name="title_activity_database_list">DatabaseListActivity</string>
    <string name="settings">SETTINGS</string>
    <string name="general_statistics">GENERAL STATISTICS</string>
    <string name="title_activity_databases">DatabasesActivity</string>
    <string name="start_repeating">START REPEATING</string>
    <string name="add_words">ADD WORDS</string>
    <string name="edit_database">EDIT THE DATABASE</string>
    <string name="see_statistics">SEE STATISTICS</string>
    <string name="exit">EXIT</string>
    <string name="title_activity_add_word">AddWord</string>
    <string name="word">Word</string>
    <string name="translation">Translation</string>
    <string name="add">ADD</string>
    <string name="finish">FINISH</string>
    <string name="percentage">Percentage: </string>
    <string name="wantLearn">Do you want to repeat problematic words?</string>
    <string name="title_activity_edit_database">EditDatabaseActivity</string>
    <string name="delete_database">DELETE DATABASE</string>
    <string name="delete_question">Are you sure you want to delete this database? You will lose all data.</string>
    <string name="yes">YES, PLEASE</string>
    <string name="no">NO, THANKS</string>
    <string name="cong">You remember everything. Congratulations!</string>
    <string name="databases">DATABASES</string>
    <string name="your_profile">YOUR PROFILE</string>
    <string name="create_new">CREATE NEW...</string>
    <string name="change_meaning">New meaning: </string>
    <string name="change_translation">New translation: </string>
    <string name="add_word_success">Word successfully added.</string>
    <string name="temporary_db_name">tem432543porary</string>
    <string name="title_activity_database_statistics">DatabaseStatisticsActivity</string>
    <string name="general_percentage">Memorization percentage:</string>
    <string name="amount_of_repetitions">Amount of repetitions:</string>

    <string-array name="months">
        <item>Jan.</item>
        <item>Feb.</item>
        <item>Mar.</item>
        <item>Apr.</item>
        <item>May</item>
        <item>Jun.</item>
        <item>Jul.</item>
        <item>Aug.</item>
        <item>Sep.</item>
        <item>Oct.</item>
        <item>Nov.</item>
        <item>Dec.</item>
    </string-array>

</resources>
