<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/nameTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:padding="10dp"
                    android:text="@string/name" />

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edit_text_layout"
                    android:inputType="textVisiblePassword"
                    android:padding="5dip" />

                <TextView
                    android:id="@+id/emailTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:padding="10dp"
                    android:text="@string/email" />

                <EditText
                    android:id="@+id/emailET"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/edit_text_layout"
                    android:inputType="textVisiblePassword"
                    android:padding="5dip" />

                <CheckBox
                    android:id="@+id/emailCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:button="@drawable/apptheme_btn_check_holo_light"
                    android:text="@string/doYou"
                    android:textColor="@color/fontColor" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="right"
        android:orientation="horizontal"
        android:weightSum="1">


        <Button
            android:id="@+id/buttonRegisterOk"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_layout"
            android:text="@string/ok"
            android:textColor="@color/buttonTextColor"

            />

        <Button
            android:id="@+id/buttonRegisterCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_layout"
            android:text="@string/cancel"
            android:textColor="@color/buttonTextColor"
            android:layout_weight="0.08" />

    </LinearLayout>
</LinearLayout>