<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context="adlr.ltmit.activities.AddWordActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">


        <TextView
            android:id="@+id/wordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:padding="10dp"
            android:text="@string/word" />

        <EditText
            android:id="@+id/wordET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_text_layout"
            android:inputType="textVisiblePassword"
            android:padding="5dip" />

        <TextView
            android:id="@+id/translationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:padding="10dp"
            android:text="@string/translation" />

        <EditText
            android:id="@+id/translationET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_text_layout"
            android:inputType="textVisiblePassword"
            android:padding="5dip" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="end">

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_layout"
            android:text="@string/add"
            android:textColor="@color/buttonTextColor"
            android:onClick="addWord"
            />

        <Button
            android:id="@+id/buttonFinish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_layout"
            android:text="@string/finish"
            android:textColor="@color/buttonTextColor"
            android:onClick="finishMe"/>
    </LinearLayout>

</LinearLayout>