<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:orientation="vertical">
        <TextView
            android:id="@+id/categoryNameTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:padding="10dp"
            android:text="@string/name_of_new_category" />

        <EditText
            android:id="@+id/categoryNameET"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/edit_text_layout"
            android:inputType="textVisiblePassword"
            android:padding="5dip" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_gravity="end">

        <Button
            android:id="@+id/buttonCategoryOk"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_layout"
            android:text="@string/ok"
            android:textColor="@color/buttonTextColor"
            android:onClick="saveMe"
            />

        <Button
            android:id="@+id/buttonCategoryCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_layout"
            android:text="@string/cancel"
            android:textColor="@color/buttonTextColor"
            android:onClick="cancelMe"/>


    </LinearLayout>
</LinearLayout>