<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context="adlr.ltmit.activities.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.38"
        android:orientation="vertical">
    </LinearLayout>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:textColor="@color/helloColor"
                android:text="Large Text"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:id="@+id/helloTextView"
                android:shadowColor="#000000"
                android:shadowDx="-1"
                android:shadowDy="1"
                android:shadowRadius="0.01"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="right"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:background="@color/settingsColorFirst"
            >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general_statistics"
                android:id="@+id/generalStatisticsTextView"
                android:paddingRight="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:background="#000000"
            >
        </LinearLayout>
        </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="right"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:background="@color/settingsColorFirst"
            >



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:id="@+id/textView"
                android:paddingRight="10dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:gravity="right"
            android:orientation="horizontal"
            android:background="#000000"
            >
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/profileName1"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"/>

            <TextView
            android:paddingTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/profileName2"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <TextView
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/profileEmail1"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_below="@+id/profileName1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <TextView
                android:paddingTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:id="@+id/profileEmail2"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:layout_below="@+id/profileName2"
                android:layout_alignLeft="@+id/profileName2"
                android:layout_alignStart="@+id/profileName2" />
        </RelativeLayout>

</LinearLayout>
</LinearLayout>